--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ ul li:last-child {
 
 .container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .left {
@@ -200,4 +201,53 @@ ol {
 
 .nextdiv p {
     text-transform: none;
+}
+
+@media screen and (max-width:800px) {
+
+    .left,
+    .right {
+        display: block;
+        width: 100%;
+        margin: 3px;
+    }
+
+    .top {
+        width: 100%
+    }
+
+    header {
+        width: 100%;
+
+    }
+
+    header a {
+        margin: 0
+    }
+
+    header nav {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        margin: 0;
+    }
+
+    header li a {
+        padding: 0;
+        font-size: 10px;
+        border: none
+    }
+
+    header li {
+        padding: 4px;
+        border: none
+    }
+
+
+
+    .left {
+        text-align: center;
+    }
+
 }
