--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@
 
 }
 
-header {
+.navbar {
     display: flex;
+    flex-direction: row;
+    background-color: rgb(251, 251, 251) !important;
     position: relative;
     height: 10vh;
-    background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
 
@@ -22,7 +23,7 @@ body {
     background-color: #F4F4F4;
 }
 
-header a {
+.navbar a {
     margin-left: 40px;
 }
 
@@ -216,16 +217,16 @@ ol {
         width: 100%
     }
 
-    header {
+    .navbar {
         width: 100%;
 
     }
 
-    header a {
+    .navbar a {
         margin: 0
     }
 
-    header nav {
+    .navbar nav {
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -233,13 +234,13 @@ ol {
         margin: 0;
     }
 
-    header li a {
+    .navbar li a {
         padding: 0;
         font-size: 10px;
         border: none
     }
 
-    header li {
+    .navbar li {
         padding: 4px;
         border: none
     }
